add any rule;modify readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "biangvalidator",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "./dist/biangvalidator.js",
   "scripts": {
@@ -9,7 +9,8 @@
   "keywords": [
     "tester",
     "validation",
-    "validate"
+    "validate",
+    "test"
   ],
   "repository": {
     "type" : "git",
