--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "validator-biang",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "",
   "main": "./dist/biangvalidator.js",
   "scripts": {
@@ -15,19 +15,18 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/longjiahui/biangvalidator.git"
+    "url": "https://github.com/longjiahui/validator-biang.git"
   },
   "author": "Anfo",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
-    "extend": "^3.0.2"
+    "extend": "^3.0.2",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
