--- a/package.json
+++ b/package.json
@@ -1,32 +1,27 @@
 {
   "name": "@anfo/validator",
-  "version": "1.0.0",
+  "version": "2.0.5",
   "description": "",
-  "main": "./dist/biangvalidator.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "start": "npm run build && node test/index.js"
+    "build": "babel src --out-dir dist",
+    "test": "mocha src"
   },
-  "keywords": [
-    "tester",
-    "validation",
-    "validate",
-    "test"
-  ],
+  "keywords": [],
+  "author": "Anfo",
   "repository": {
     "type": "git",
-    "url": "https://github.com/longjiahui/validator-biang.git"
+    "url": "https://github.com/longjiahui/validator.git"
   },
-  "author": "Anfo",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "extend": "^3.0.2",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "mocha": "^8.1.2",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "core-js": "^3.6.5"
+  }
 }
