--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@anfo/validator",
-  "version": "2.0.6",
+  "version": "2.1.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src --out-dir dist",
+    "start": "webpack --config webpack.config.js && npm test",
+    "build": "webpack --config webpack.config.js",
     "test": "mocha src"
   },
   "keywords": [],
@@ -15,13 +16,15 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "mocha": "^8.1.2",
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.24.1"
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-syntax-optional-chaining": "^7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
+    "mocha": "^8.1.3",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   },
-  "dependencies": {
-    "core-js": "^3.6.5"
-  }
+  "dependencies": {}
 }
