--- a/package.json
+++ b/package.json
@@ -1,30 +1,21 @@
 {
-  "name": "@anfo/validator",
-  "version": "2.2.5",
-  "description": "",
-  "main": "dist/main.js",
-  "scripts": {
-    "start": "webpack --config webpack.config.js && npm test",
-    "build": "webpack --config webpack.config.js",
-    "test": "mocha src"
-  },
-  "keywords": [],
-  "author": "Anfo",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/longjiahui/validator.git"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-syntax-optional-chaining": "^7.8.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "babel-loader": "^8.1.0",
-    "mocha": "^8.1.3",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
-  },
-  "dependencies": {}
+    "name": "validator-ts",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "tsc",
+        "lint": "tsc --noEmit",
+        "test": "tsc-watch -P tsconfig.test.json --onSuccess \"node ./node_modules/mocha/bin/_mocha --recursive ./dist_test/**/*.spec.js\""
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/mocha": "^10.0.6",
+        "@types/node": "^20.12.8",
+        "mocha": "^10.4.0",
+        "tsc-watch": "^6.2.0",
+        "typescript": "^5.4.5"
+    }
 }
