--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-    "name": "validator-ts",
+    "name": "@anfo/validator",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "files": ["dist"],
+    "main": "./dist/index.js",
+    "module": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "scripts": {
         "build": "tsc",
         "lint": "tsc --noEmit",
