feat: v3.0.1 优化ObjectRules类型，可以嵌套

--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
     "name": "@anfo/validator",
-    "version": "3.0.0",
+    "version": "3.0.1",
     "description": "",
-    "files": ["dist"],
+    "files": [
+        "dist"
+    ],
     "main": "./dist/index.js",
     "module": "./dist/index.js",
     "types": "./dist/index.d.ts",
